--- a/Sistema Bibliotecario.ipynb
+++ b/Sistema Bibliotecario.ipynb
@@ -2,63 +2,121 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5c0d500a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class libros:\n",
-    "    #Constructor de la clase\n",
-    "    def _init_(self, titulo, autor, isbn, cantlib):\n",
-    "        self.titulo=titulo\n",
-    "        self.autor=autor\n",
-    "        self.isbn=isbn\n",
-    "        self.cantlib=cantlib\n",
+    "    #Constructor de la clase, donde representa el libro en el catalogo\n",
+    "    def __init__(self, titulo, autor, isbn, cantlib):\n",
+    "        self.titulo = titulo\n",
+    "        self.autor = autor\n",
+    "        self.isbn = isbn\n",
+    "        self.cantlib = cantlib\n",
+    "        self.cantdispo = cantlib #La cantidad de libros disponibles es igual a los libros añadidos alprincipio\n",
     "        print(\"Se ha registrado el libro: \", self.titulo)\n",
-    "    \n",
-    "    #Metodo para eliminar\n",
-    "    def _del_ (self): \n",
-    "        print(\"Se ha eliminado el registro del libro: \", self.titulo)\n",
-    "\n",
+    "   \n",
     "    #Metodo para ver la informacion del libro\n",
-    "    def _str_ (self):\n",
-    "        return \"El libro {} fue escrito por el autor {} con el isbn {} \".format(self.titulo, self.autor, self.isbn)\n",
+    "    def __str__(self):\n",
+    "        print(\"Titulo: \", self.titulo, \", Autor: \", self.autor, \", isbn: \", self.isbn, \", Cantidad disponible: \", self.cantdispo)\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8de122ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha registrado el libro:  El principito\n",
+      "Titulo:  El principito , Autor:  Antoine de Saint-Exupéry , isbn:  978-3-16-148410-0 , Cantidad disponible:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=libros(\"El principito\", \"Antoine de Saint-Exupéry\", \"978-3-16-148410-0\", 5)\n",
+    "l.__str__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3da43e22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class usuarios:\n",
+    "    #Constructor de la clase, donde representa el usuario registrado\n",
+    "    def __init__(self, nombre, apellido, id):\n",
+    "        self.nombre=nombre\n",
+    "        self.apellido=apellido\n",
+    "        self.id=id\n",
+    "        print(\"Se ha registrado el usuario: \", self.nombre, self.apellido, \"con el id: \", self.id)\n",
     "\n",
-    "    #Metodo para ver si el libro se encuentra disponible"
+    "    def __str__(self):\n",
+    "        print(\"Nombre: \", self.nombre, \", Apellido: \", self.apellido, \", ID: \", self.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c8125f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha registrado el usuario:  Luigy Lopez con el id:  001\n",
+      "Nombre:  Luigy , Apellido:  Lopez , ID:  001\n"
+     ]
+    }
+   ],
+   "source": [
+    "u=usuarios(\"Luigy\", \"Lopez\", \"001\")\n",
+    "u.__str__()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3f9a2ed",
+   "id": "c6cd0b5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Clase donde generare la lista de libros\n",
-    "class catalogo:\n",
-    "    \"\"\"\n",
-    "    En esta clase se definira la lista de libros para poder\n",
-    "    llevar a cabo un orden, asi como poder llevar un conteo de \n",
-    "    los libros existentes disponibles\n",
+    "class biblioteca: \n",
+    "    \"\"\" \n",
+    "    Clase principal del proyecto, donde se administra todo\n",
+    "    desde el catalogo de libros, usuarios, prestamos, devoluciones \n",
     "    \"\"\"\n",
     "\n",
-    "    libro=[] #Lista vacia donde se guardaran los libros\n",
-    "\n",
-    "    def _init_(self, libro=[]):\n",
-    "        self.libro=libro\n",
-    "\n",
-    "    def agregar(self, li): #Aqui se agregan los libros a la lista\n",
-    "        self.libro.append(li)\n",
-    "\n",
-    "    def mostrar(self): #Con este metodo mostramos los datos\n",
-    "        for li in self.libro:\n",
-    "            print(li)"
+    "    def __init__(self):\n",
+    "        "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
